# vartovcf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/lib/: common.rs  fai.rs  io.rs  mod.rs  progress_logger.rs  record.rs  records.rs  vartovcf.rs
test/: nras.var
tests/: calls.duplicates.var  calls.duplicates.vcf  calls.g.var  calls.g.vcf  calls.max-mismatches.vcf  calls.non-variants-skipped.vcf  calls.skippable.var  calls.skippable.vcf  calls.var  calls.vcf  integration_test.rs  nras.var  nras.vcf  reference.fa.fai
