[package]
name = "vartovcf"
version = "0.1.0"
authors = ["Clint Valentine <valentine.clint@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/clintval/vartovcf"
description = "Convert variants from VarDict/VarDictJava into VCF format, fast."
documentation = "https://github.com/clintval/vartovcf/README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "variant", "calling", "VCF", "VarDict", "VarDictJava"]

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "vartovcflib"
path = "src/lib/mod.rs"

[[bin]]
name = "vartovcf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bio-types = "0.10"
csv = "1.1"
env_logger = "0.8"
log = "0.4"
rust-htslib = "0.36"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.10"
env_logger = "0.8"
file_diff = "1.0.0"
rstest = "0.6"
tempfile = "3"
