[package]
name = "vartovcf"
version = "0.1.0"
authors = ["Clint Valentine <valentine.clint@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/clintval/vartovcf"
description = "Convert variants from VarDict/VarDictJava into VCF v4.2 format."
documentation = "https://github.com/clintval/vartovcf/README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "variant", "calling", "VCF", "VarDict", "VarDictJava"]

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "vartovcflib"
path = "src/lib/mod.rs"

[[bin]]
name = "vartovcf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
bio-types = "1.0.1"
case = "1.0.0"
chrono = "0.4.38"
csv = "1.3.0"
env_logger = "0.11.3"
log = "0.4.22"
proglog = "0.3.0"
rust-htslib = "0.47.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.8.3" }
structopt = "0.3.26"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
env_logger = "0.11.3"
file_diff = "1.0.0"
pretty_assertions = "1.4.0"
rstest = "0.21.0"
tempfile = "3.10.1"
