[package]
name = "vartovcf"
version = "1.5.1"
authors = ["Clint Valentine <valentine.clint@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/clintval/vartovcf"
description = "Convert variants from VarDict/VarDictJava into VCF v4.2 format."
documentation = "https://github.com/clintval/vartovcf/README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "variant", "calling", "VCF", "VarDict", "VarDictJava"]

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "vartovcflib"
path = "src/lib/mod.rs"

[[bin]]
name = "vartovcf"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
anyhow = "1.0.100"
bio-types = "1.0.4"
case = "1.0.0"
csv = "1.4.0"
env_logger = "0.11.8"
log = "0.4.28"
proglog = "0.4.0"
rust-htslib = "0.46.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.15.0" }
structopt = "0.3.26"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
env_logger = "0.11.8"
file_diff = "1.0.0"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serde_test = "1.0.177"
tempfile = "3.23.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
